--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - NODE_ENV=production
     volumes:
       - ./backend:/home/node/app
-    expose:
-      - '3000'
+    ports:
+      - 3001:3001
     command: "npm install"
     command: "node app.js"
 
@@ -35,4 +35,4 @@ services:
     volumes: 
       - ./frontend/build/:/usr/local/apache2/htdocs/
     ports:
-      - 80:80
+      - 8082:80
